actualización de la administración

--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -31,7 +31,8 @@
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    
+    <!-- Iconos -->
+	<link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
     <!-- Libraries Stylesheet -->
     <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
     
@@ -308,10 +309,13 @@
 					</script>
 				</div>
     {% endblock navbar %}
+
+    <!-- Contenido -->
     <section class="">
         {% block content %}
         {% endblock content %}
     </section>
+
     </header>
 	<!-- Dropdowns de perfil -->
 	<script>
