--- a/templates/components/modulos.html
+++ b/templates/components/modulos.html
@@ -3,7 +3,7 @@
 <title>{% block title %} {{ title1 }} {% endblock title %}</title>
 {% block content %}
     <!-- SECCION DE MENU Y MODULOS -->
-     <section class="">
+     <section class="dark:bg-principal">
         <div class="p-8" data-aos="fade-up" data-aos-delay="300">
             
             <h1 class="dark:text-white text-4xl text-center mt-16 font-Pacifico">
@@ -38,4 +38,5 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
     <script src="{% static 'js/sweet_alert.js' %}"></script>
+
 {% endblock content %}
