--- a/templates/security/auth/signin.html
+++ b/templates/security/auth/signin.html
@@ -25,19 +25,39 @@
             <h1>Login</h1>
             <form method="POST">
                 {% csrf_token %}
-                <label for="id_username" class="dark:text-green-300 font-black uppercase text-lg z-20"></label>
-                <div class="input-container">
-                    <input type="text" id="id_username" name="username" placeholder="User" required>
-                    <span class="icon-user">&#9993;</span> <!-- Ícono de email en negro -->
+                
+                <!-- Campo para el usuario -->
+                <label for="{{ form.username.id_for_label }}" class="dark:text-green-300 font-black uppercase text-lg z-20">{{ form.username.label }}</label>
+                <div class="input-group">
+                    <span class="absolute inset-y-0 left-0 flex items-center pl-3 top-6">
+                        <i class="text-green-400 dark:text-green-300 fa-solid fa-user"></i>
+                    </span>
+                    <input type="text"
+                        class="pl-10 shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-green-500 dark:focus:border-green-500 dark:shadow-sm-light"
+                        id="id_username" name="username">
                 </div>
                 
-                <label for="id_password" class="dark:text-green-300 font-black uppercase text-lg z-20"></label>
-                <div class="input-container">
-                    <input type="password" id="id_password" name="password" placeholder="Password" required>
-                    <span class="icon-lock">&#128274;</span> <!-- Ícono de candado en negro -->
+                <!-- Campo para la contraseña -->
+                <label for="{{ form.password.id_for_label }}" class="dark:text-green-300 font-black uppercase text-lg z-20">{{ form.password.label }}</label>
+                <div class="input-group">
+                    <span class="absolute inset-y-0 left-0 flex items-center pl-3 top-6">
+                        <i class="text-green-400 dark:text-green-300 fa-solid fa-lock"></i>
+                    </span>
+                    <input type="password"
+                        class="pl-10 shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-green-500 dark:focus:border-green-500 dark:shadow-sm-light"
+                        id="id_password" name="password">
+                    <span class="absolute inset-y-0 right-0 flex items-center pr-3 top-6">
+                        <button class="btn btn-outline-secondary p-2" type="button" id="togglePassword">
+                            <i class="fas fa-eye"></i>
+                        </button>
                 </div>
                 
-                <span class="forgot-password">¿Olvidé mi contraseña?</span> <!-- Texto de recuperación -->
+                <!-- Enlace de olvido de contraseña -->
+                <span class="forgot-password">
+                    <a href="" class="text-green-600 hover:underline dark:text-green-300 font-Tiny5 uppercase">¿Olvidé mi contraseña?</a>
+                </span>
+
+                <!-- Botón de inicio de sesión -->
                 <button type="submit" class="button">Login</button>
             </form>
             
