--- a/templates/components/modulos.html
+++ b/templates/components/modulos.html
@@ -1,146 +1,117 @@
 {% extends 'components/base.html' %}
+{% block title %}{{ title1 }}{% endblock %}
 {% load static %}
-<title>{% block title %} {{ title1 }} {% endblock title %}</title>
 {% block content %}
-    <!-- SECCION DE MENU Y MODULOS -->
-     <section class="dark:bg-principal">
-        <div class="p-8" data-aos="fade-up" data-aos-delay="300">
-            
-            <h1 class="dark:text-white text-4xl text-center mt-16 font-Pacifico">
-                {{title2}}
-            </h1>
-            <p class="dark:text-gray-400  text-center mt-6 text-4xl font-light">
-                Bienvenido <span class="dark:text-white text-4xl text-center mt-6 font-Pacifico"> {{user.username}} </span>
-            </p>
-            {% for menu_wrapper in menu_list %} 
-                <div class="w-screen flex border-b-2 border-gray-200 py-4 opacity-90">
-                    <i class="{{menu_wrapper.menu.icon}} text-3xl text-green-500"></i>
-                    <h3 class="dark:text-gray-400 font-bold characteristics-card-title"><a href="">menu {{menu_wrapper.menu.name}}</a></h3>
-                </div>
-                <div class="dark:bg-principal grid sm:grid-cols-2 lg:grid-cols-4 gap-8 m-4 lg:mx-4 lg:p-4 rounded-3xl"
-                data-aos="fade-up" data-aos-delay="300">
-                 {% for group_modulo_permission in menu_wrapper.group_module_permission_list %}
-                    <div
-                        class="characteristics-card bg-white dark:bg-secundario dark:border-none transition duration-500 hover:bg-gradient-to-r hover:from-purple-200 dark:hover:bg-gradient-to-r dark:hover:from-black dark:hover:to-purple-500">
-                        <i class="{{group_modulo_permission.module.icon}} text-3xl text-purple-500"></i>
-                        <h3 class="dark:text-gray-400 font-bold characteristics-card-title"><a href="{{group_modulo_permission.module.url}}">{{group_modulo_permission.module.name}}</a></h3>
-                    </div>
-                {% endfor %}
-                </div> 
-            {% endfor %}
-           
-        </div>
-    </section>
-    <!-- CIERRE DE SECCION DE MENU Y MODULOS -->
- 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<head>  
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Enlace a Font Awesome -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>  
+        body {  
+            font-family: 'Arial', sans-serif;  
+            background-color: #F5F1DA;  
+            margin: 0;  
+            padding: 0;  
+            display: flex;  
+            flex-direction: column;  
+            align-items: center;  
+            justify-content: center; /* Centrar el contenido verticalmente */    
+            height: 100vh; /* Altura de la ventana para centrar verticalmente */  
+        }  
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+        h1 {  
+            font-family: 'Courier New', Courier, monospace;  
+            color: #d69a6c;  
+            margin: 0;  
+        }  
+        .welcome {  
+            font-size: 24px;  
+            color: black;
+            margin: 20px 0;  /* Margen superior e inferior reducido */  
+            text-align: center;  
+            font-weight: bold;  
+        }  
+        .image-section {  
+            position: relative;  
+            width: 100%;  
+            height: 250px; /* Ajustar la altura de la imagen */  
+            overflow: hidden; /* Asegura que la imagen no desborde el contenedor */  
+        }  
+        .image-section img {  
+            width: 100%; /* Imagen ocupa todo el ancho de la página */  
+            height: 100%; /* La imagen ocupará toda la altura del contenedor */  
+            object-fit: cover; /* Asegura que la imagen se recorte y mantenga su proporción */  
+        }  
+        .description {  
+            position: absolute;  
+            top: 50%;  /* Ajusta la posición vertical al centro */  
+            right: 10%; /* Ajusta la posición horizontal */  
+            color: white;  
+            font-size: 24px;  /* Aumenta el tamaño de la fuente */  
+            transform: translateY(-50%); /* Centra verticalmente el texto */  
+            padding: 10px; /* Espaciado alrededor del texto */  
+            font-family: 'Roboto', sans-serif;
+        }  
+        .grid {  
+            display: flex;  
+            justify-content: center; /* Centrar las tarjetas horizontalmente */  
+            gap: 20px;  
+            width: 100%;  
+            max-width: 900px; /* Aumenta el ancho máximo para permitir tarjetas más grandes */  
+            margin: 20px auto;  /* Centramos el contenedor de las tarjetas */  
+            flex-wrap: wrap; /* Permite que las tarjetas se distribuyan en varias filas si es necesario */
+        }  
+        .card {  
+            background-color: #fff;  
+            border: 1px solid #ddd;  
+            border-radius: 10px;  
+            padding: 30px;  /* Aumentar el padding para hacer las tarjetas más grandes */  
+            text-align: center;  
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);  
+            display: flex;  
+            flex-direction: column;  
+            align-items: center;  
+            justify-content: center;  
+            transition: transform 0.2s;  
+            min-width: 150px; /* Asegura que las tarjetas tengan un ancho mínimo */  
+            height: 150px; /* Aumenta la altura de las tarjetas */  
+            color: black;
+        }  
+        .card:hover {  
+            transform: scale(1.05); /* Efecto de aumento al pasar el mouse */  
+        }  
+        .card i {  
+            font-size: 60px; /* Reduce el tamaño del icono */  
+            color: #d69a6c; /* Color del icono */  
+            margin-bottom: 15px; /* Aumenta el margen inferior para dar más espacio al texto */  
+            margin-top: 10px; /* Aumenta el margen superior para alejarlo del borde */  
+        }  
+    </style>  
+</head>  
+<body>  
 
-    <script src="{% static 'js/sweet_alert.js' %}"></script>
+<div class="welcome">Bienvenido {{ user.username }}</div>  
 
-    <!-- Script para el modal -->
-    
-   {% comment %} <script>
-        $(document).ready(function () {
-            // Función para ocultar el modal al hacer clic en cualquier botón de ingresar
-            $('#btnCliente, #btnAdministrador, #btnModoInvitado').click(function (e) {
-                e.preventDefault(); // Evita que el enlace se siga
-                $('#modal-home').addClass('hidden'); // Oculta el modal usando Tailwind
+<div class="image-section">  
+    <img src="{% static 'img/admin.avif' %}" alt="Control Panel">  
+    <div class="description">{{ title2 }} - Control y administración integral del sistema en un solo lugar!</div>  
+</div>
 
-                // Comportamiento específico para el botón de "Modo Invitado"
-                if (this.id === 'btnModoInvitado') {
-                    Swal.fire({
-                        icon: 'warning',
-                        title: '<h2 class="dark-title">ADVERTENCIA</h2>',
-                        text: 'Para usar las funciones de nuestra aplicación, debe registrarse en nuestro sistema.',
-                        showCancelButton: true,
-                        confirmButtonText: 'Registrarse',
-                        cancelButtonText: 'Continuar con el modo invitado',
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            // Redirecciona a la página de registro
-                            window.location.href = "{% url 'security:auth_login' %}";
-                        }
-                    });
-                } else {
-                    // Redirecciona a la URL especificada en el enlace
-                    window.location.href = $(this).attr('href');
-                }
-            });
-        });
-    </script>  {% endcomment %}
-    <!-- Script para el carrusel de imágenes -->
-    {% comment %} <script>
-        var imagePaths = [
-            "{% static 'img/home-carausel/carausel-1.jpg' %}",
-            "{% static 'img/home-carausel/carausel-2.jpg' %}",
-            "{% static 'img/home-carausel/carausel-3.jpg' %}",
-            "{% static 'img/home-carausel/carausel-4.jpg' %}",
-            "{% static 'img/home-carausel/carausel-5.jpg' %}",
-            "{% static 'img/home-carausel/carausel-6.jpg' %}",
-            "{% static 'img/home-carausel/carausel-7.jpg' %}",
-            "{% static 'img/home-carausel/carausel-8.jpg' %}",
-        ];
+<!-- Menú de tarjetas dinámico -->
+{% for menu_wrapper in menu_list %}
+    <div class="grid">  
+        {% for group_modulo_permission in menu_wrapper.group_module_permission_list %}
+            <div class="card">  
+                <a href="{{ group_modulo_permission.module.url }}" style="text-decoration: none; color: inherit;">
+                    <i class="{{ group_modulo_permission.module.icon }} text-3xl text-purple-500"></i>  
+                    {{ group_modulo_permission.module.name }}  
+                </a>
+            </div>  
+        {% endfor %}
+    </div> 
+{% endfor %}
 
-        var carouselInner = document.getElementById('carousel-inner');
-        var currentSlide = 0;
-        var totalSlides = imagePaths.length;
-
-        function showSlide(index) {
-            carouselInner.style.transform = `translateX(-${index * 100}%)`;
-        }
-
-        function nextSlide() {
-            currentSlide = (currentSlide + 1) % totalSlides;
-            showSlide(currentSlide);
-        }
-
-        window.onload = function () {
-            imagePaths.forEach((path) => {
-                carouselInner.innerHTML += `<img src="${path}" alt="Carousel Image" class="w-full">`;
-            });
-            setInterval(nextSlide, 5000); // Cambiar a la siguiente imagen cada 5 segundos
-        };
-    </script>  {% endcomment %}
-
-    <!-- Script para enviar correos -->
-  {% comment %} <script> 
-        document.addEventListener("DOMContentLoaded", function () {
-            var form = document.getElementById('contact-form');
-            form.addEventListener('submit', function (event) {
-                event.preventDefault(); // Prevenir el comportamiento predeterminado del formulario
-
-                var formData = new FormData(form);
-
-                fetch(form.action, {
-                    method: form.method,
-                    body: formData,
-                    headers: {
-                        'Accept': 'application/json'
-                    }
-                }).then(response => {
-                    if (response.ok) {
-                        document.getElementById('success-message').classList.remove('hidden');
-                        form.reset(); // Resetear el formulario
-
-                        // Ocultar el mensaje de éxito después de 5 segundos
-                        setTimeout(() => {
-                            document.getElementById('success-message').classList.add('hidden');
-                        }, 5000);
-                    } else {
-                        response.json().then(data => {
-                            if (Object.hasOwn(data, 'errors')) {
-                                alert(data["errors"].map(error => error["message"]).join(", "));
-                            } else {
-                                alert('Oops! Hubo un problema al enviar tu formulario');
-                            }
-                        });
-                    }
-                }).catch(error => {
-                    alert('Oops! Hubo un problema al enviar tu formulario');
-                });
-            });
-        });
-    </script>  {% endcomment %}
-{% endblock content %}
+</body>  
+</html>  
+{% endblock %}
