--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -41,6 +41,8 @@
     
     <!-- Customized Bootstrap Stylesheet -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
     {% block extra_head %}{% endblock %}
 	<script>
