--- a/templates/components/course.html
+++ b/templates/components/course.html
@@ -8,63 +8,56 @@
     <div class="container py-10">
         <div class="text-center mb-2">
             <h5 class="text-primary text-uppercase mb-1" style="letter-spacing: 2px;">Niveles</h5>
-            <h1 style="font-size: 2rem;">Aprende con nosotros!</h1>
+            <h1 class="text-2xl">Aprende con nosotros!</h1>
         </div>
         <div class="row justify-content-center">
+            {% for item in niveles_con_progreso %}
             <div class="col-lg-5 col-md-6 mb-4">
-                <div class="rounded overflow-hidden mb-2" style="max-width: 100%; height: 300px;">
-                    <img class="img-fluid" src="{% static 'img/alfabeto.jpeg' %}" alt="" style="height: 150px; width: 100%; object-fit: cover;">
-                    <div class="bg-secondary p-4" style="height: 130px;">
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>Nivel 1</small>
+                <!-- Verificar si el nivel está desbloqueado -->
+                <div class="rounded overflow-hidden shadow-lg bg-white {% if not item.desbloqueado %} bg-gray-200 opacity-75{% endif %}" style="height: 300px;">
+                    <img class="w-full h-36 object-cover" src="{{ item.nivel.imagen.url }}" alt="{{ item.nivel.name }}">
+                    <div class="p-4 {% if not item.desbloqueado %} bg-gray-300{% else %} bg-gray-100{% endif %}">
+                        <div class="flex justify-between mb-3">
+                            <small class="text-gray-600">
+                                <i class="fa fa-users text-primary mr-2"></i>Nivel {{ item.nivel.orden }}
+                            </small>
                         </div>
-                        <a class="h5" href="{% url 'alfabeto' %}">Alfabeto</a>
-                        <a class="h6 d-block" href="" style="font-size: 14px;">
+
+                        <!-- Mostrar las lecciones de cada nivel si está desbloqueado -->
+                        {% if item.desbloqueado %}
+                        <ul class="list-unstyled mt-2" style="font-size: 14px;">
+                            {% for leccion in item.nivel.leccion_set.all %}
+                            <li>
+                                <a href="{% url 'core:leccion_detalle' leccion.id %}" class="text-lg font-semibold text-blue-600 hover:underline">
+                                    {{ leccion.name }}
+                                </a>
+                            </li>
+                            {% empty %}
+                            <li>No hay lecciones disponibles.</li>
+                            {% endfor %}
+                        </ul>
+                        {% else %}
+                        <!-- Mostrar que el nivel está bloqueado -->
+                        <div class="text-center mt-4">
+                            <span class="text-lg font-semibold text-gray-500">Nivel bloqueado</span>
+                            <i class="fa fa-lock text-gray-500 ml-1"></i>
+                        </div>
+                        {% endif %}
+                        
+                        <!-- Link de feedback (se puede ajustar si es para niveles desbloqueados o no) -->
+                        {% if item.desbloqueado %}
+                        <a class="text-sm block mt-2" href="#">
+                            <u>Feedback</u> <i class="fa fa-unlock ml-1"></i>
+                        </a>
+                        {% else %}
+                        <a class="text-sm block mt-2" href="#">
                             <u>Feedback</u> <i class="fa fa-lock ml-1"></i>
                         </a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="rounded overflow-hidden mb-2" style="max-width: 100%; height: 300px;">
-                    <img class="img-fluid" src="{% static 'img/numeros.jpeg' %}" alt="" style="height: 150px; width: 100%; object-fit: cover;">
-                    <div class="bg-secondary p-4" style="height: 130px;">
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>Nivel 2</small>
-                        </div>
-                        <a class="h5" href="{% url 'numeros' %}">Números</a>
-                        <a class="h6 d-block" href="" style="font-size: 14px;">
-                            <u>Feedback</u> <i class="fa fa-lock ml-1"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-2">
-                <div class="rounded overflow-hidden mb-2" style="max-width: 100%; height: 300px;">
-                    <img class="img-fluid" src="{% static 'img/colores.jpeg' %}" alt="" style="height: 150px; width: 100%; object-fit: cover;">
-                    <div class="bg-secondary p-4" style="height: 130px;">
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>Nivel 3</small>
-                        </div>
-                        <a class="h5" href="">Colores</a>
-                        <a class="h6 d-block" href="" style="font-size: 14px;">
-                            <u>Feedback</u> <i class="fa fa-lock ml-1"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="rounded overflow-hidden mb-2" style="max-width: 100%; height: 300px;">
-                    <img class="img-fluid" src="{% static 'img/evaluacion.webp' %}" alt="" style="height: 150px; width: 100%; object-fit: cover;">
-                    <div class="bg-secondary p-4" style="height: 130px;">
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>Nivel 4</small>
-                        </div>
-                        <a class="h5" href="" onclick="closeDropdown()"
-                        >Evaluación Final</a>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
